[package]
name = "telebot"
version = "0.0.8"

authors = ["bytesnake <bytesnake@mailbox.org>"]
license = "MIT"
description = "A wrapper around the telegram bot api, powered by futures"

repository = "https://github.com/bytesnake/telebot"
readme = "README.md"
documentation = "https://docs.rs/telebot"

keywords = ["telebot", "telegram", "bot", "chat"]

[dependencies]
serde = "0.8"
serde_json = "0.8.4"
serde_derive = "0.8"
futures = "0.1.7"     
tokio-core = "0.1.2"
hyper = {git="https://github.com/hyperium/hyper.git"}
hyper-tls = {git="https://github.com/hyperium/hyper-tls.git"}
telebot-derive = "0.0.5"
mime = "0.2.2"

[dependencies.multipart]
version = "0.10.0-alpha.1"
default-features = false
features = ["client","mock"]
